MDEV-11463 Server crashes in mark_array upon JSON_VALID.

The depth of nested arrays should be controlled, as it's limited.